[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speculoos"
version = "0.1.0"
description = "Efficient speculative sampling for language models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bijin Chakraborty", email = "bijin08@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["language-models", "inference", "speculative-sampling", "llm", "transformers"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/bijinc/speculoos"
Repository = "https://github.com/bijinc/speculoos"
Issues = "https://github.com/bijinc/speculoos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["speculoos*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
